# blog_gpt

./: .flake8  .gitignore  .gitpod.yml  LICENSE  README.md  pyproject.toml
blog_gpt/: blog_gpt.py
